--- a/layouts/panel_layouts/brenham/brenham.css
+++ b/layouts/panel_layouts/brenham/brenham.css
@@ -3,34 +3,20 @@
  * OA Brenham panel layout
 **/
 
-.brenham-container {
+ .panels-dnd .brenham-container {
   margin-bottom: 1em;
 }
 
-.brenham-sidebar {
+.panels-dnd .brenham-sidebar {
   width: 34.043%;
   float: left;
 }
 
-  .brenham-sidebar-inner {
-    margin-right: 20px;
-  }
-
-.brenham-content {
-  width: 65.957%;
-  float: left;
+.panels-dnd .brenham-sidebar-inner {
+  margin-right: 20px;
 }
 
-/* iPhone [portrait + landscape] */
-@media only screen and (max-width: 480px) {
-  .brenham-content,
-  .brenham-sidebar {
-    width: 100%;
-    float: none;
-  }
-  
-  .brenham-sidebar-inner {
-    margin-right: 0;
-  }
-  
+.panels-dnd .brenham-content {
+  width: 65.957%;
+  float: left;
 }
