--- a/layouts/panel_layouts/brown/brown.css
+++ b/layouts/panel_layouts/brown/brown.css
@@ -3,61 +3,41 @@
  * OA Brown panel layout
 **/
 
-.brown-container {
+.panels-dnd .brown-container {
   margin-bottom: 1em;
 }
 
-.brown-slider {
+.panels-dnd .brown-slider {
   float: left;
   width: 68.085%
 }
 
-  .brown-slider-inner {
-    margin-right: 20px;
-  }
+.panels-dnd .brown-slider-inner {
+  margin-right: 20px;
+}
 
-.brown-slider-gutter {
+.panels-dnd .brown-slider-gutter {
   float: left;
   width: 31.915%;
 }
 
-.brown-middle-region,
-.brown-footer-region {
+.panels-dnd .brown-middle-region,
+.panels-dnd .brown-footer-region {
   width: 34.043%;
   float: left;
 }
 
-  .brown-middle-region-inner,
-  .brown-footer-region-inner {
-    margin-right: 20px;
-  }
+.panels-dnd .brown-middle-region-inner,
+.panels-dnd .brown-footer-region-inner {
+  margin-right: 20px;
+}
 
-  .brown-column3,
-  .brown-footer-column3 {
-    width: 31.915%;
-  }
-  
-    .brown-column3-inner,
-    .brown-footer-column3-inner {
-      margin-right: 0;
-    }
+.panels-dnd .brown-column3,
+.panels-dnd .brown-footer-column3 {
+  width: 31.915%;
+}
 
-/* iPhone [portrait + landscape] */
-@media only screen and (max-width: 480px) {
-  .brown-slider,
-  .brown-slider-gutter,
-  .brown-middle-region,
-  .brown-footer-region,
-  .brown-column3,
-  .brown-footer-column3 {
-    width: 100%;
-    float: none;
-  }
-  
-  .brown-slider-inner,
-  .brown-middle-region-inner,
-  .brown-footer-region-inner {
-    margin-right: 0;
-  }
-  
+.panels-dnd .brown-column3-inner,
+.panels-dnd .brown-footer-column3-inner {
+  margin-right: 0;
 }
