--- a/layouts/panel_layouts/bryant/bryant.css
+++ b/layouts/panel_layouts/bryant/bryant.css
@@ -3,33 +3,20 @@
  * OA bryant panel layout
 **/
 
-.bryant-container {
+.panels-dnd .bryant-container {
   margin-bottom: 1em;
 }
 
-.bryant-sidebar {
+.panels-dnd .bryant-sidebar {
   width: 23.404%;
   float: left;
 }
 
-  .bryant-sidebar-inner {
-    margin-right: 20px;
-  }
-
-.bryant-content {
-  float: left;
-  width: 76.596%;
+.panels-dnd .bryant-sidebar-inner {
+  margin-right: 20px;
 }
 
-/* iPhone [portrait + landscape] */
-@media only screen and (max-width: 480px) {
-  .bryant-sidebar,
-  .bryant-content {
-    width: 100%;
-    float: none;
-  }
-  
-  .bryant-sidebar-inner {
-    margin-right: 0;
-  }
+.panels-dnd .bryant-content {
+  float: left;
+  width: 76.596%;
 }
