--- a/layouts/panel_layouts/bryant_flipped/bryant-flipped.css
+++ b/layouts/panel_layouts/bryant_flipped/bryant-flipped.css
@@ -3,34 +3,20 @@
  * OA bryant panel layout
 **/
 
-.bryant-flipped-container {
+.panels-dnd .bryant-flipped-container {
   margin-bottom: 1em;
 }
 
-.bryant-flipped-sidebar {
+.panels-dnd .bryant-flipped-sidebar {
   width: 21.277%;
   float: left;
 }
 
-.bryant-flipped-content {
+.panels-dnd .bryant-flipped-content {
   float: left;
   width: 78.723%;
 }
 
-  .bryant-flipped-content-inner {
-    margin-right: 20px;
-  }
-  
-/* iPhone [portrait + landscape] */
-@media only screen and (max-width: 480px) {
-  .bryant-flipped-sidebar,
-  .bryant-flipped-content {
-    width: 100%;
-    float: none;
-  }
-  
-  .bryant-flipped-content-inner {
-    margin-right: 0;
-  }
-  
+.panels-dnd .bryant-flipped-content-inner {
+  margin-right: 20px;
 }
