--- a/layouts/panel_layouts/burr/burr.css
+++ b/layouts/panel_layouts/burr/burr.css
@@ -3,33 +3,20 @@
  * OA Burr panel layout
 **/
 
-.burr-container {
+.panels-dnd .burr-container {
   margin-bottom: 1em;
 }
 
-.burr-sidebar {
+.panels-dnd .burr-sidebar {
   width: 34.043%;
   float: left;
 }
 
-  .burr-sidebar-inner {
-    margin-right: 20px;
-  }
-
-.burr-content {
-  float: left;
-  width: 65.957%;
+.panels-dnd .burr-sidebar-inner {
+  margin-right: 20px;
 }
 
-/* iPhone [portrait + landscape] */
-@media only screen and (max-width: 480px) {
-  .burr-content,
-  .burr-sidebar {
-    width: 100%;
-    float: none;
-  }
-  
-  .burr-sidebar-inner {
-    margin-right: 0;
-  }
+.panels-dnd .burr-content {
+  float: left;
+  width: 65.957%;
 }
