--- a/layouts/panel_layouts/geary/geary.css
+++ b/layouts/panel_layouts/geary/geary.css
@@ -3,36 +3,23 @@
  * OA Geary panel layout
 **/
 
-.geary-container {
+.panels-dnd .geary-container {
   margin-bottom: 1em;
 }
 
-.geary-column-content-region {
+.panels-dnd .geary-column-content-region {
   width: 34.043%;
   float: left;
 }
 
-.geary-column-content-region-inner {
+.panels-dnd .geary-column-content-region-inner {
   margin-right: 20px;
 }
 
-  .geary-column3 {
-    width: 31.915%;
-  }
+.panels-dnd .geary-column3 {
+  width: 31.915%;
+}
 
-    .geary-column3-inner {
-      margin-right: 0;
-    }
-    
-/* iPhone [portrait + landscape] */
-@media only screen and (max-width: 480px) {
-  .geary-column-content-region,
-  .geary-column3 {
-    width: 100%;
-    float: none;
-  }
-  
-  .geary-column-content-region-inner {
-    margin-right: 0;
-  }
+.panels-dnd .geary-column3-inner {
+  margin-right: 0;
 }
