--- a/layouts/panel_layouts/hewston/hewston.css
+++ b/layouts/panel_layouts/hewston/hewston.css
@@ -3,53 +3,37 @@
  * OA Hewston panel layout
 **/
 
-.hewston-container {
+.panels-dnd .hewston-container {
   margin-bottom: 1em;
 }
 
-.hewston-slider {
+.panels-dnd .hewston-slider {
   float: left;
   width: 68.085%;
 }
 
-  .hewston-slider-inner {
-    margin-right: 20px;
-  }
+.panels-dnd .hewston-slider-inner {
+  margin-right: 20px;
+}
 
-.hewston-slider-gutter {
+.panels-dnd .hewston-slider-gutter {
   float: left;
   width: 31.915%;
 }
 
-.hewston-middle-region {
+.panels-dnd .hewston-middle-region {
   width: 34.043%;
   float: left;
 }
 
-  .hewston-middle-region-inner {
-    margin-right: 20px;
-  }
+.panels-dnd .hewston-middle-region-inner {
+  margin-right: 20px;
+}
 
-  .hewston-column3 {
-    width: 31.915%;
-  }
-  
-    .hewston-column3-inner {
-      margin-right: 0;
-    }
-    
-/* iPhone [portrait + landscape] */
-@media only screen and (max-width: 480px) {
-  .hewston-slider,
-  .hewston-slider-gutter,
-  .hewston-middle-region,
-  .hewston-column3 {
-    width: 100%;
-    float: none;
-  }
-  
-  .hewston-slider-inner,
-  .hewston-middle-region-inner {
-    margin-right: 0;
-  }
+.panels-dnd .hewston-column3 {
+  width: 31.915%;
+}
+
+.panels-dnd .hewston-column3-inner {
+  margin-right: 0;
 }
