--- a/layouts/panel_layouts/moscone/moscone.css
+++ b/layouts/panel_layouts/moscone/moscone.css
@@ -3,33 +3,20 @@
  * OA Moscone panel layout
 **/
 
-.moscone-container {
+.panels-dnd .moscone-container {
   margin-bottom: 1em;
 }
 
-.moscone-sidebar {
+.panels-dnd .moscone-sidebar {
   width: 34.043%;
   float: left;
 }
 
-  .moscone-sidebar-inner {
-    margin-right: 20px;
-  }
-
-.moscone-content {
-  width: 65.957%;
-  float: left;
+.panels-dnd .moscone-sidebar-inner {
+  margin-right: 20px;
 }
 
-/* iPhone [portrait + landscape] */
-@media only screen and (max-width: 480px) {
-  .moscone-content,
-  .moscone-sidebar {
-    width: 100%;
-    float: none;
-  }
-  
-  .moscone-sidebar-inner {
-    margin-right: 0;
-  }
+.panels-dnd .moscone-content {
+  width: 65.957%;
+  float: left;
 }
