--- a/layouts/panel_layouts/moscone_flipped/moscone-flipped.css
+++ b/layouts/panel_layouts/moscone_flipped/moscone-flipped.css
@@ -3,33 +3,20 @@
  * OA Moscone Flipped panel layout
 **/
 
-.moscone-flipped-container {
+.panels-dnd .moscone-flipped-container {
   margin-bottom: 1em;
 }
 
-.moscone-flipped-content {
+.panels-dnd .moscone-flipped-content {
   width: 68.085%;
   float: left;
 }
 
-  .moscone-flipped-content-inner {
-    margin-right: 20px;
-  }
-
-.moscone-flipped-sidebar {
-  width: 31.915%;
-  float: left;
+.panels-dnd .moscone-flipped-content-inner {
+  margin-right: 20px;
 }
 
-/* iPhone [portrait + landscape] */
-@media only screen and (max-width: 480px) {
-  .moscone-flipped-sidebar,
-  .moscone-flipped-content {
-    width: 100%;
-    float: none;
-  }
-  
-  .moscone-flipped-content-inner {
-    margin-right: 0;
-  }
+.panels-dnd .moscone-flipped-sidebar {
+  width: 31.915%;
+  float: left;
 }
