--- a/layouts/panel_layouts/sanderson/sanderson.css
+++ b/layouts/panel_layouts/sanderson/sanderson.css
@@ -3,53 +3,37 @@
  * OA Sanderson panel layout
 **/
 
-.sanderson-container {
+.panels-dnd .sanderson-container {
   margin-bottom: 1em;
 }
 
-.sanderson-column-content-region {
+.panels-dnd .sanderson-column-content-region {
   width: 51.064%;
   float: left;
 }
 
-  .sanderson-column2 {
-    width: 48.936%;
-  }
+.panels-dnd .sanderson-column2 {
+  width: 48.936%;
+}
 
-  .sanderson-column-content-region-inner {
-    margin-right: 20px;
-  }
+.panels-dnd .sanderson-column-content-region-inner {
+  margin-right: 20px;
+}
 
-.sanderson-secondary-column-content-region {
+.panels-dnd .sanderson-secondary-column-content-region {
   width: 34.043%;
   float: left;
 }
 
-  .sanderson-secondary-column-content-region-inner {
-    margin-right: 20px;
-  }
+.panels-dnd .sanderson-secondary-column-content-region-inner {
+  margin-right: 20px;
+}
 
-  .sanderson-secondary-column3 {
-    width: 31.915%;
-  }
-  
-    .sanderson-column2-inner,
-    .sanderson-secondary-column3-inner {
-      margin-right: 0;
-    }
-    
-/* iPhone [portrait + landscape] */
-@media only screen and (max-width: 480px) {
-  .sanderson-column-content-region,
-  .sanderson-secondary-column-content-region,
-  .sanderson-column2,
-  .sanderson-secondary-column3  {
-    width: 100%;
-    float: none;
-  }
-  
-  .sanderson-column-content-region-inner,
-  .sanderson-secondary-column-content-region-inner {
-    margin-right: 0;
-  }
+.panels-dnd .sanderson-secondary-column3 {
+  width: 31.915%;
+}
+
+.panels-dnd .sanderson-column2-inner,
+.panels-dnd .sanderson-secondary-column3-inner {
+  margin-right: 0;
 }
