add table styles

--- a/sass/variables/_app.scss
+++ b/sass/variables/_app.scss
@@ -11,6 +11,7 @@ $l-navigation-bg-color: #222222;
 $main-menu-anchor-color: #FFFFFF;
 $sidebar-bg-color: #f5f5f5;
 $sidebar-border-color: #efefef;
+$table-rows-bg-color: #f5f5f5;
 
 // Measurements.
 $border-radius: 3px;
