--- a/css/stellar.hacks.css
+++ b/css/stellar.hacks.css
@@ -1,11 +1,10 @@
 @media all and (max-width: 800px) {
-  /* line 3, ../sass/stellar.hacks.scss */
   #toolbar, #admin-menu {
-    display: none; }
+    display: none;
+  }
 
-  /* line 8, ../sass/stellar.hacks.scss */
   html body.toolbar, html body.admin-menu {
     padding-top: 0 !important;
-    margin-top: 0 !important; } }
-
-/*# sourceMappingURL=stellar.hacks.css.map */
+    margin-top: 0 !important;
+  }
+}
