--- a/css/stellar.no-query.css
+++ b/css/stellar.no-query.css
@@ -7,8 +7,8 @@
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url(../fonts/font-awesome/fontawesome-webfont.eot?1439911261);
-  src: url(../fonts/font-awesome/fontawesome-webfont.eot?&1439911261#iefix) format("embedded-opentype"), url(../fonts/font-awesome/fontawesome-webfont.woff2?1439911261) format("woff2"), url(../fonts/font-awesome/fontawesome-webfont.woff?1439911261) format("woff"), url(../fonts/font-awesome/fontawesome-webfont.ttf?1439911261) format("truetype"), url(../fonts/font-awesome/fontawesome-webfont.svg?1439911261#fontawesomeregular) format("svg");
+  src: url(../fonts/font-awesome/fontawesome-webfont.eot?1431960869);
+  src: url(../fonts/font-awesome/fontawesome-webfont.eot?&1431960869#iefix) format("embedded-opentype"), url(../fonts/font-awesome/fontawesome-webfont.woff2?1431960869) format("woff2"), url(../fonts/font-awesome/fontawesome-webfont.woff?1431960869) format("woff"), url(../fonts/font-awesome/fontawesome-webfont.ttf?1431960869) format("truetype"), url(../fonts/font-awesome/fontawesome-webfont.svg?1431960869#fontawesomeregular) format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -2508,8 +2508,12 @@ iframe.media-youtube-player {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100% !important;
-  height: 100% !important;
+}
+@media (max-width: 640px) {
+  iframe.media-youtube-player {
+    width: 100% !important;
+    height: 100% !important;
+  }
 }
 
 .l-main .menu li, .l-footer .menu li,
