--- a/sass/base/_media.scss
+++ b/sass/base/_media.scss
@@ -15,6 +15,8 @@ iframe.media-youtube-player {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100% !important;
-  height: 100% !important;
+  @media (max-width: 640px) {
+    width: 100% !important;
+    height: 100% !important;
+  }
 }
