--- a/css/stellar.no-query.css
+++ b/css/stellar.no-query.css
@@ -7,8 +7,8 @@
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url(../fonts/font-awesome/fontawesome-webfont.eot?1431960869);
-  src: url(../fonts/font-awesome/fontawesome-webfont.eot?&1431960869#iefix) format("embedded-opentype"), url(../fonts/font-awesome/fontawesome-webfont.woff2?1431960869) format("woff2"), url(../fonts/font-awesome/fontawesome-webfont.woff?1431960869) format("woff"), url(../fonts/font-awesome/fontawesome-webfont.ttf?1431960869) format("truetype"), url(../fonts/font-awesome/fontawesome-webfont.svg?1431960869#fontawesomeregular) format("svg");
+  src: url(../fonts/font-awesome/fontawesome-webfont.eot?1431373275);
+  src: url(../fonts/font-awesome/fontawesome-webfont.eot?&1431373275#iefix) format("embedded-opentype"), url(../fonts/font-awesome/fontawesome-webfont.woff2?1431373275) format("woff2"), url(../fonts/font-awesome/fontawesome-webfont.woff?1431373275) format("woff"), url(../fonts/font-awesome/fontawesome-webfont.ttf?1431373275) format("truetype"), url(../fonts/font-awesome/fontawesome-webfont.svg?1431373275#fontawesomeregular) format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -2359,6 +2359,9 @@
   padding: 0.8rem;
   border: 1px solid #2f6bac;
 }
+.btn:hover, .btn:focus, .btn:active {
+  background: #3a80c9;
+}
 
 @-moz-keyframes breathe {
   0% {
@@ -2805,6 +2808,9 @@ a.active {
   color: #fff;
   padding: 0.8rem;
   border: 1px solid #2f6bac;
+}
+.view-display-id-promoted_news_pane .views-field-view-node a:hover, .view-display-id-promoted_news_pane .views-field-view-node a:focus, .view-display-id-promoted_news_pane .views-field-view-node a:active {
+  background: #3a80c9;
 }
 
 .l-footer {
