added button hover

--- a/sass/abstractions/_button_mixins.scss
+++ b/sass/abstractions/_button_mixins.scss
@@ -6,8 +6,11 @@
   color: $color;
   padding: 0.8rem;
   border: 1px solid darken($bg-color, 3);
-  &:hover {
-    color: $color;
+
+  &:hover,
+  &:focus,
+  &:active {
+    background: lighten($bg-color, 5);
   }
 }
 
